--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
+# CakePHP 3
+
 /vendor/*
 /config/app.php
-/tmp/*
-/logs/*
+
+/tmp/cache/models/*
+!/tmp/cache/models/empty
+/tmp/cache/persistent/*
+!/tmp/cache/persistent/empty
+/tmp/cache/views/*
+!/tmp/cache/views/empty
+/tmp/sessions/*
+!/tmp/sessions/empty
+/tmp/tests/*
+!/tmp/tests/empty
+tmp/
+
+logs/
+!/logs/empty
+
+# CakePHP 2
+
+/app/tmp/*
+/app/Config/core.php
+/app/Config/database.php
+/vendors/*
