--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "*",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "cakemanager/cakephp-utils": "dev-master"
     },
     "require-dev": {
         "psy/psysh": "@stable",
