color mapa y home

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "*",
         "fzaninotto/faker": "^1.6",
-        "cakemanager/cakephp-utils": "dev-master"
+        "cakemanager/cakephp-utils": "dev-master",
+        "cakephp/localized": "^3.0"
     },
     "require-dev": {
         "psy/psysh": "@stable",
