reseteo de contraseña mediante link al correo

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "cakemanager/cakephp-utils": "dev-master",
         "cakephp/localized": "^3.0",
         "friendsofcake/cakephp-csvview": "~3.0",
-        "admad/cakephp-i18n": "1.0.x-dev"
+        "admad/cakephp-i18n": "1.0.x-dev",
+        "ircmaxell/random-lib": "^1.2"
     },
     "require-dev": {
         "psy/psysh": "@stable",
